--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatable" content="ie=edge">
     <meta name="keywords" content="kosa, sampon, nega, lepota, frizura">
     <title>Fun Facts About Cats-Galerija</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#333" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -41,39 +41,39 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 8</div>
-            <img src="img/cat1.jpg" style="width:100%">
+            <img src="cat1.jpg" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 8</div>
-            <img src="img/cat2.jpg" style="width:100%">
+            <img src="cat2.jpg" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 8</div>
-            <img src="img/cat3.jpg" style="width:100%">
+            <img src="cat3.jpg" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">4 / 8</div>
-            <img src="img/cat4.jpg" style="width:100%">
+            <img src="cat4.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
             <div class="numbertext">5 / 8</div>
-            <img src="img/cat5.jpg" style="width:100%">
+            <img src="cat5.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
             <div class="numbertext">6 / 8</div>
-            <img src="img/cat6.jpg" style="width:100%">
+            <img src="cat6.jpg" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">7 / 8</div>
-            <img src="img/cat8.jpg" style="width:100%">
+            <img src="cat8.jpg" style="width:100%">
         </div>
         <div class="mySlides fade">
             <div class="numbertext">8 / 8</div>
-            <img src="img/cat9.jpg" style="width:100%">
+            <img src="cat9.jpg" style="width:100%">
         </div>
         
 
@@ -82,7 +82,7 @@
 
 
 
-    <script src="js/gall.js"></script>
+    <script src="gall.js"></script>
 
 
 </body>
